# tooling-bugs

./: .gitignore  README.md
msvc_compare_at_template_instantiation/: A.ixx  B.ixx
msvc_constexpr_try_not_implemented/: A.ixx  CMakeLists.txt  example.cpp
msvc_crash_auto_argument/: A.ixx  B.ixx
msvc_crash_compare/: CMakeLists.txt  example.cpp
msvc_crash_module_with_std_expected/: A.ixx  B.ixx  example.cpp
msvc_formatter/: A.ixx  B.ixx  CMakePresets.json  example.cpp
msvc_module_cant_find_operator_lt_of_string_view/: A.ixx  B.ixx
msvc_module_with_atomic_header/: CMakeLists.txt  CMakePresets.json  example.cpp  example.hpp  weird.ixx
msvc_user_defined_literal/: A.ixx  B.ixx  example.cpp
